add url param to outh for multi app support

--- a/.cargo/config.toml
+++ b/.cargo/config.toml
@@ -2,4 +2,5 @@
 JOBBER_OAUTH_HANDLER_FUNCTION_URL = ""
 JOBBER_APP_FUNCTION_URL = ""
 JOBBER_APP_CLIENT_ID = ""
-JOBBER_APP_REDIRECT_URL = ""
+JOBBER_APP_REDIRECT_URI = ""
+JOBBER_APP_NAME = ""
