--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,3 +29,9 @@ yew-router = "0.18.0"
 yew-datepicker = "0.2.0"
 chrono = "0.4.31"
 pure-rust-locales = "0.7.0"
+
+[profile.release]
+strip = true
+opt-level = 'z'
+lto = true
+codegen-units = 1
